# libunicodenames

./: .hgignore  .hgtags  AUTHORS  INSTALL.C++  Makefile.am  README  autogen.sh  configure.ac  en.blocks-db  en.names-db  indent.am  indent.mk  libunicodenames.h  libunicodenames.pc.in  make-blocks-db.in  make-libunicodenames-db.h2m  make-libunicodenames-db.in.in  make-names-db.in
doc/: uninm_block_start.3  uninm_find_blocks_db.3.in  uninm_find_names_db.3.in  uninm_names_db_close.3
examples/: print_blocks.c  print_names.c
m4/: gnulib-cache.m4  stm_changeloggerize.m4  stm_compiler_flags.m4  stm_define_attr_visible.m4  stm_prog_gawk.m4  stm_prog_help2man.m4  stm_prog_sortsmill_changelogger.m4  stm_prog_wget.m4
po/: Makevars  POTFILES.in  fr.gmo  fr.po
rpm/: README  libunicodenames.spec
tests/: Makefile.am  c_names_db_locale.c  testsuite.at
